--- a/WebAppService/Views/Blog/BlogList.cshtml
+++ b/WebAppService/Views/Blog/BlogList.cshtml
@@ -89,7 +89,7 @@
     <div class="row mt-5 pxs-3">
         <div class="col-md-7 align-items-center">
             <div class="breadcrumb col-md-12">
-                <span class="no-arrow text-c-0 p-0">Bào viết</span>
+                <span class="no-arrow text-c-0 p-0">Bài viết</span>
             </div>
             <div>
                 <span class="text-media" id="txtBaiViet"></span>
@@ -103,7 +103,7 @@
                     <input type="text" class="form-control w-100 border-0 pb-0" id="txtSearh" placeholder="Tìm bài viết ..." name="x" value="" />
                 </div>
                 <div class="col-4 " style="padding:15px 0px">
-                    <a href="#" class="main-menu btn-sm btn-orrange font-weight-bold w-100" id="btnSearch"><i class="fa fa-search"></i> <span>Tìm</span> </a>
+                    <a href="#" class="main-menu btn-sm btn-orrange w-100" id="btnSearch"><i class="ti ti-search" style="font-size:12px"></i> <span class="hide-on-mobile">Tìm</span></a>
                 </div>
             </div>
         </div>
