--- a/WebAppService/Views/DichVuDacBiet/DichVuDacBiet.cshtml
+++ b/WebAppService/Views/DichVuDacBiet/DichVuDacBiet.cshtml
@@ -108,7 +108,7 @@
                     <input type="text" class="form-control w-100 border-0 pb-0" id="txtSearh" placeholder="Tìm dịch vụ ..." name="x" value="" />
                 </div>
                 <div class="col-4 " style="padding:15px 0px">
-                    <a href="#" class="main-menu btn-sm btn-orrange font-weight-bold w-100" id="btnSearch"><i class="fa fa-search"></i> <span>Tìm</span> </a>
+                    <a href="#" class="main-menu btn-sm btn-orrange w-100" id="btnSearch"><i class="ti ti-search" style="font-size:12px"></i> <span class="hide-on-mobile">Tìm</span></a>
                 </div>
             </div>
         </div>
