--- a/WebAppService/Views/Doctor/ListDoctor.cshtml
+++ b/WebAppService/Views/Doctor/ListDoctor.cshtml
@@ -137,7 +137,7 @@
                     </select>
                 </div>
                 <div class="col-3" style="padding:13px 0px;text-align: right;">
-                    <a href="#" class="main-menu btn-sm btn-orrange font-weight-bold w-100" id="btnSearch"><i class="fa fa-search"></i> <span class="hide-on-mobile">Tìm</span></a>
+                    <a href="#" class="main-menu btn-sm btn-orrange w-100" id="btnSearch"><i class="ti ti-search" style="font-size:12px"></i> <span class="hide-on-mobile txt-tim-kiem">Tìm</span></a>
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
 </div>
 <script id="news-template" type="text/x-dot-template">
     {{ for(var i = 0; i < it.newsList.length; i++) { }}
-          <article class="col-lg-4 col-12 mb-4 psi-1 wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
+          <article class="col-lg-4 col-md-6 col-12 mb-4 psi-1 wow fadeIn animated" style="visibility: visible; animation-name: fadeIn;">
                     <div class="bg-doctor p-0  mb-5 box-shadow-img card-hover card-active">
                         <div class="row p-0">
                             <div class="col-md-12 col-5 pr-mobile-0">
