--- a/WebAppService/Views/LienHe/LienHe.cshtml
+++ b/WebAppService/Views/LienHe/LienHe.cshtml
@@ -91,7 +91,7 @@
                                 <img src="@Url.Content("~/root/imglh.png")" alt="Doctor" class="doctor-overlay">
                             </div>
                         </div>
-                        <div class="form col-md-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100;margin: 0px !important;">
+                        <div class="form col-md-12 col-lg-8 col-sm-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100;margin: 0px !important;">
                             <div class="txt-dkk">Đăng ký khám, nhận thông tin mới từ chúng tôi!</div>
                             <div class="mt-30 row">
                                 <div class="col-md-6 p-0">
@@ -116,7 +116,7 @@
                                         <div id="recaptcha-pc"></div>
                                     </div>
                                     <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
-                                        <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
+                                        <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100 btn-submit-lien-he">Gửi</a>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mt-form p-0">
