--- a/WebAppService/Views/Shared/_NavigationBottom.cshtml
+++ b/WebAppService/Views/Shared/_NavigationBottom.cshtml
@@ -2,11 +2,18 @@
     <div class="indicator" id="bottom-nav-indicator"></div>
     <ul class="menu bottom-nav-menu">
         <li>
-            <a href="tel:1800 8005" class="active">
+            <a href="/about-us" class="active">
+                <span class="icon">
+                    <img src="https://gdm-catalog-fmapi-prod.imgix.net/ProductLogo/1dff9fed-9729-4c07-9db9-6905460cae3f.png?w=80&h=80&fit=max&dpr=3&auto=format&q=50" width="100px" alt="">
+                </span>
+                <span class="text"></span>
+            </a>
+        </li>
+        <li>
+            <a href="tel:1800 8005" class="active2">
                 <span class="icon">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Phone_icon.png" alt="">
                 </span>
-                <span class="text"></span>
             </a>
         </li>
         <li>
@@ -31,7 +38,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="#" id="btn-top">
                 <span class="icon">
                     <img src="https://cdn-icons-png.flaticon.com/512/3396/3396769.png" alt="">
                 </span>
