--- a/WebAppService/Views/Blog/BlogDetail.cshtml
+++ b/WebAppService/Views/Blog/BlogDetail.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "BlogDetail";
 }
 <link href="~/web/assets/css/blog_detail.css" rel="stylesheet" />
+<link href="~/web/tiny-css/tiny.css" rel="stylesheet" />
 
 <div class="entry-header entry-header-2 mb-0 mt-0 text-center">
     <div class="thumb-overlay img-hover-slide border-radius-5 position-relative" style="background-image: url(/web/assets/imgs/farme.png)">
@@ -25,7 +26,7 @@
                             </div>
                         </div>
                         <div class="loop-list-style-3">
-                            <div class="col-lg-12 col-md-12" style="font-family:Inter !important">
+                            <div class="col-lg-12 col-md-12" id="tiny-css">
                                 @Html.Raw(Model.Record.NoiDung)
                             </div>
                         </div>
