--- a/WebAppService/Views/FAQ/Index.cshtml
+++ b/WebAppService/Views/FAQ/Index.cshtml
@@ -48,7 +48,7 @@
         </nav>
     </div>
 
-    <div class="question-doctor mt-120">
+    <div class="question-doctor md-mt-120">
         <div class="container pl-md-0">
             <div class="">
                 <div class="form-section-wrapper mb-30 row">
@@ -57,7 +57,7 @@
                             <img src="@Url.Content("~/root/imglh.png")" alt="Doctor" class="doctor-overlay">
                         </div>
                     </div>
-                    <div class="form col-md-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100;margin: 0px !important;">
+                    <div class="form col-md-12 col-lg-8 col-sm-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100;margin: 0px !important;">
                         <div class="txt-dkk">Đăng ký khám, nhận thông tin mới từ chúng tôi!</div>
                         <div class="mt-30 row">
                             <div class="col-md-6 p-0">
@@ -82,7 +82,7 @@
                                     <div id="recaptcha-pc"></div>
                                 </div>
                                 <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
-                                    <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
+                                    <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100 btn-submit-lien-he">Gửi</a>
                                 </div>
                             </div>
                             <div class="col-md-6 mt-form p-0">
@@ -94,10 +94,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Nút gửi để dưới toàn form -->
-                        <!--div class="form-group col-md-12 p-0  d-block d-md-none">
-                            <a href="#" onclick="SendForm()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
-                        </div>-->
                         <div class="form-group col-md-12 p-0  d-block d-md-none">
                             <div id="recaptcha-mobile"></div>
                         </div>
