--- a/WebAppService/wwwroot/web/assets/css/home.css
+++ b/WebAppService/wwwroot/web/assets/css/home.css
@@ -86,7 +86,7 @@
 
 .dot-right {
     position: absolute;
-    bottom:10%;
+    bottom: 10%;
     right: 0%;
     width: 130px;
     opacity: 0.7;
@@ -146,18 +146,7 @@
         margin-bottom: 10px;
     }
 
-.bg-hover-green:hover {
-    background: #009F9C;
-    color: #ffffff;
-}
 
-    .bg-hover-green:hover .post-by {
-        color: #F7FFFF;
-    }
-
-    .bg-hover-green:hover h5 {
-        color: #F7FFFF;
-    }
 
 
 .author-img-circle {
@@ -320,12 +309,87 @@
 }
 
 .service-card {
+    --corner-thickness: 4px;
+    --corner-size: 68px;
+    --corner-radius: 24px;
+    --corner-base: rgba(0,0,0,0.08);
+    --corner-accent: #05ddee;
+    position: relative;
     flex: 0 0 353px;
     background: #FFFFFF;
-    border-radius: 24px;
+    border-radius: var(--corner-radius);
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    z-index: 0;
 }
+
+    /* 2 span hiển thị ở 2 góc */
+    .service-card .corner {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 5;
+    }
+
+        .service-card .corner.tl {
+            top: 0;
+            left: 0;
+        }
+
+        .service-card .corner.br {
+            bottom: 0;
+            right: 0;
+        }
+
+        .service-card .corner.tl::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+        }
+
+        .service-card .corner.br::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+        }
+
+        .service-card .corner.tl::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-top-left-radius: var(--corner-radius);
+            background: linear-gradient(to right, var(--corner-accent) 100%, transparent 0) left top / 0% var(--corner-thickness) no-repeat, linear-gradient(to bottom, var(--corner-accent) 100%, transparent 0) left top / var(--corner-thickness) 0% no-repeat;
+            transition: background-size 0.6s cubic-bezier(.2,.9,.2,1);
+        }
+
+        .service-card .corner.br::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-bottom-right-radius: var(--corner-radius);
+            background: linear-gradient(to left, var(--corner-accent) 100%, transparent 0) right bottom / 0% var(--corner-thickness) no-repeat, linear-gradient(to top, var(--corner-accent) 100%, transparent 0) right bottom / var(--corner-thickness) 0% no-repeat;
+            transition: background-size 0.6s cubic-bezier(.2,.9,.2,1);
+        }
+
+    .service-card:hover .corner.tl::after,
+    .service-card:hover .corner.br::after {
+        background-size: 100% var(--corner-thickness), var(--corner-thickness) 100%;
+    }
+
+.bg-hover-green:hover {
+    background: #009F9C;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+    .bg-hover-green:hover .post-by {
+        color: #F7FFFF;
+    }
+
+    .bg-hover-green:hover h5 {
+        color: #F7FFFF;
+    }
 
 .service-content {
     padding: 15px;
@@ -491,10 +555,12 @@
 .mtauthordv {
     margin-top: 90px !important;
 }
+
 .bcsm-image {
     width: 100%;
     height: 150px;
 }
+
 .txt-layout-2 {
     font-size: 2.1vw;
     font-family: Montserrat;
@@ -522,14 +588,17 @@
         position: inherit;
         top: -150px !important
     }
+
     .question-doctor {
         background: #F9FCFF;
         position: inherit;
         top: -150px;
     }
+
     .message-client {
         margin-top: -131px;
     }
+
     .author-info-small-text {
         color: #757575;
         font-size: 11px;
@@ -537,6 +606,7 @@
         text-align: justify;
         font-family: 'Inter';
     }
+
     .dot-right {
         position: absolute;
         bottom: 33%;
@@ -545,6 +615,7 @@
         opacity: 0.7;
         z-index: 0;
     }
+
     .dot-left {
         position: absolute;
         top: 10%;
@@ -553,6 +624,7 @@
         opacity: 1;
         z-index: 0;
     }
+
     .form-section-wrapper {
         position: relative;
         background-color: #e0f7fa;
@@ -563,10 +635,12 @@
         border: 2px solid #ffeee6;
         box-shadow: 1px 1px 5px -2px #343a4094;
     }
+
     .tranform-x {
         transform: translateX(100%);
         white-space: nowrap;
     }
+
     .service-card {
         flex: 0 0 280px;
         background: #FFFFFF;
@@ -574,6 +648,7 @@
         box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
         overflow: hidden;
     }
+
     .floating-box {
         width: 100%;
         height: 120px;
@@ -581,6 +656,7 @@
         top: -91px;
         text-align: center;
     }
+
     .is-thumber-video {
         display: block;
     }
@@ -588,281 +664,284 @@
     .is-text-video {
         display: none;
     }
+
     .md-mb-15 {
         margin-bottom: 15px !important;
     }
 }
 
 @media screen and (max-width: 768px) {
-        .title_sv {
-            padding: 0px !important;
-        }
-
-        .author-info-small-text {
-            color: #757575;
-            padding-right: 0px;
-            text-align: justify;
-        }
-
-
-        .author-info-mobile {
-            position: inherit;
-            top: -30px;
-            padding-top: 28px;
-            background: white;
-        }
-
-        .custom-play-button {
-            width: 50px;
-            height: 50px;
-        }
-
-            .custom-play-button::before {
-                width: 36px;
-                height: 36px;
-            }
-
-            .custom-play-button i {
-                font-size: 16px;
-            }
-
-        .slider-container {
-            justify-content: flex-start;
-        }
-
-        .play_btn a {
-            transform: translate(-62%, -62%) !important;
-        }
-
-        .text-ic-5 {
-            font-family: 'Montserrat', sans-serif;
-            color: #2F4848;
-            font-size: 28px;
-            font-weight: 700;
-        }
-
-        .text-ics-5 {
-            font-family: 'Inter', sans-serif;
-            color: #000000;
-            font-size: 11px;
-        }
-
-        .text-dvdb1 {
-            font-family: 'Montserrat', sans-serif;
-            color: #000000;
-            font-size: 14px;
-            font-weight: 700;
-        }
-
-        .text-dvdb2 {
-            font-family: 'Inter', sans-serif;
-            color: #757575;
-            font-size: 13px;
-        }
-
-        .service-card-y {
-            position: inherit;
-            top: -23px;
-        }
-
-        .dot-left {
-            position: absolute;
-            top: 297px;
-            left: 213px;
-            width: 147px;
-            opacity: 0.8;
-            z-index: 0;
-        }
-
-        .dot-right {
-            position: absolute;
-            top: 99px;
-            right: 259px;
-            width: 99px;
-            opacity: 0.7;
-            z-index: 0;
-        }
-
-
-
-        /* CSS dành cho mobile */
-        .mobile-icon {
-            margin-top: 8px !important;
-        }
-
-        .box-item {
-            page-break-inside: avoid;
-            break-inside: avoid;
-            text-align: center;
-            margin-top: 5px;
-        }
-
-        .layout-home {
-            height: 590px;
-        }
-
-        .icon_box {
-            font-size: 16px;
-            margin-top: 7px;
-        }
-
-        .author-info {
-            margin-top: 45px;
-            margin-bottom: 20px;
-        }
-
-
-        .author-info-text {
-            text-align: left;
-            font-size: 25px;
-            font-weight: 700;
-        }
-
-        .author-img-circle {
-            text-align: center;
-            width: 300px;
-            height: 300px;
-        }
-
-        .avatar {
-            height: 320px;
-            position: relative;
-            top: -25px;
-        }
-
-        .avatar2 {
-            width: 100%;
-            height: 100%;
-        }
-
-        .author-bio {
-            text-align: center;
-            margin-top: 22px !important;
-        }
-
-        #LayoutHome1 {
-            margin-bottom: 50px;
-        }
-
-        .floating-box {
-            width: 350px;
-            height: 120px;
-            margin-left: 0px;
-            top: -91px;
-            text-align: center;
-        }
-
-        .icon_mobile {
-            width: 13px;
-            height: 13px;
-        }
-
-        .box_item_text {
-            margin-top: 10px;
-            padding: 3px !important;
-        }
-
-            .box_item_text h5 {
-                margin-top: 0px;
-                font-size: 10px;
-            }
-
-            .box_item_text p {
-                font-size: 9px;
-            }
-
-        .img_avt2 {
-            height: 300px;
-            width: 329px;
-        }
-
-        .t_mb {
-            font-family: 'Inter', sans-serif;
-            color: #F26522;
-            font-size: 12px;
-            font-weight: 600;
-        }
-
-        .t_mb2 {
-            font-family: 'Montserrat', sans-serif;
-            color: #2F4848;
-            font-size: 17px;
-            font-weight: bold;
-            line-height: 120%;
-            margin-bottom: 10px;
-            z-index: 100;
-        }
-
-
-        .btn_sv {
-            text-align: center;
-            margin-top: -20px !important;
-        }
-
-        #sp_sv article {
-            padding: 3px;
-        }
-
-        .text-head-breadcrumb {
-            font-size: 20px;
-            font-weight: 700;
-        }
-
-        .doctor-note2 {
-            position: relative;
-            height: 100%;
-        }
-
-        .swiper {
-            width: 100%;
-            height: 100%;
-        }
-
-        .swiper1 {
-            margin-left: 10px
-        }
-
-        .sub_video {
-            height: 77px;
-        }
-
-        .post-thumb2 {
-            width: 138px;
-            margin-right: 10px;
-        }
-
-        .text-c-2 {
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 2; /* Số dòng muốn hiển thị */
-            overflow: hidden;
-            text-overflow: ellipsis;
-            line-height: 1.5em; /* Có thể chỉnh tùy font */
-            max-height: 4.5em;
-        }
-
-        #sliderContainer {
-            max-height: 270px;
-            overflow-y: auto;
-            scrollbar-width: none; /* Firefox */
-            -ms-overflow-style: none;
-        }
-
-        .item_vd {
-            padding: 0px;
-            margin-left: 16px;
-            margin-top: 15px;
-        }
-
-        .swiper-slide {
-            padding: 0px;
-        }
-
-        .item_vd {
-            height: 90px;
-        }
-        #img_dv {
-            margin-right: 0px;
-            width: -webkit-fill-available;
-        }
+    .title_sv {
+        padding: 0px !important;
     }
+
+    .author-info-small-text {
+        color: #757575;
+        padding-right: 0px;
+        text-align: justify;
+    }
+
+
+    .author-info-mobile {
+        position: inherit;
+        top: -30px;
+        padding-top: 28px;
+        background: #ffffff00;
+        color: #272626;
+    }
+
+    .custom-play-button {
+        width: 50px;
+        height: 50px;
+    }
+
+        .custom-play-button::before {
+            width: 36px;
+            height: 36px;
+        }
+
+        .custom-play-button i {
+            font-size: 16px;
+        }
+
+    .slider-container {
+        justify-content: flex-start;
+    }
+
+    .play_btn a {
+        transform: translate(-62%, -62%) !important;
+    }
+
+    .text-ic-5 {
+        font-family: 'Montserrat', sans-serif;
+        color: #2F4848;
+        font-size: 28px;
+        font-weight: 700;
+    }
+
+    .text-ics-5 {
+        font-family: 'Inter', sans-serif;
+        color: #000000;
+        font-size: 11px;
+    }
+
+    .text-dvdb1 {
+        font-family: 'Montserrat', sans-serif;
+        color: #000000;
+        font-size: 14px;
+        font-weight: 700;
+    }
+
+    .text-dvdb2 {
+        font-family: 'Inter', sans-serif;
+        color: #757575;
+        font-size: 13px;
+    }
+
+    .service-card-y {
+        position: inherit;
+        top: -23px;
+    }
+
+    .dot-left {
+        position: absolute;
+        top: 297px;
+        left: 213px;
+        width: 147px;
+        opacity: 0.8;
+        z-index: 0;
+    }
+
+    .dot-right {
+        position: absolute;
+        top: 99px;
+        right: 259px;
+        width: 99px;
+        opacity: 0.7;
+        z-index: 0;
+    }
+
+
+
+    /* CSS dành cho mobile */
+    .mobile-icon {
+        margin-top: 8px !important;
+    }
+
+    .box-item {
+        page-break-inside: avoid;
+        break-inside: avoid;
+        text-align: center;
+        margin-top: 5px;
+    }
+
+    .layout-home {
+        height: 590px;
+    }
+
+    .icon_box {
+        font-size: 16px;
+        margin-top: 7px;
+    }
+
+    .author-info {
+        margin-top: 45px;
+        margin-bottom: 20px;
+    }
+
+
+    .author-info-text {
+        text-align: left;
+        font-size: 25px;
+        font-weight: 700;
+    }
+
+    .author-img-circle {
+        text-align: center;
+        width: 300px;
+        height: 300px;
+    }
+
+    .avatar {
+        height: 320px;
+        position: relative;
+        top: -25px;
+    }
+
+    .avatar2 {
+        width: 100%;
+        height: 100%;
+    }
+
+    .author-bio {
+        text-align: center;
+        margin-top: 22px !important;
+    }
+
+    #LayoutHome1 {
+        margin-bottom: 50px;
+    }
+
+    .floating-box {
+        width: 350px;
+        height: 120px;
+        margin-left: 0px;
+        top: -91px;
+        text-align: center;
+    }
+
+    .icon_mobile {
+        width: 13px;
+        height: 13px;
+    }
+
+    .box_item_text {
+        margin-top: 10px;
+        padding: 3px !important;
+    }
+
+        .box_item_text h5 {
+            margin-top: 0px;
+            font-size: 10px;
+        }
+
+        .box_item_text p {
+            font-size: 9px;
+        }
+
+    .img_avt2 {
+        height: 300px;
+        width: 329px;
+    }
+
+    .t_mb {
+        font-family: 'Inter', sans-serif;
+        color: #F26522;
+        font-size: 12px;
+        font-weight: 600;
+    }
+
+    .t_mb2 {
+        font-family: 'Montserrat', sans-serif;
+        color: #2F4848;
+        font-size: 17px;
+        font-weight: bold;
+        line-height: 120%;
+        margin-bottom: 10px;
+        z-index: 100;
+    }
+
+
+    .btn_sv {
+        text-align: center;
+        margin-top: -20px !important;
+    }
+
+    #sp_sv article {
+        padding: 3px;
+    }
+
+    .text-head-breadcrumb {
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+    .doctor-note2 {
+        position: relative;
+        height: 100%;
+    }
+
+    .swiper {
+        width: 100%;
+        height: 100%;
+    }
+
+    .swiper1 {
+        margin-left: 10px
+    }
+
+    .sub_video {
+        height: 77px;
+    }
+
+    .post-thumb2 {
+        width: 138px;
+        margin-right: 10px;
+    }
+
+    .text-c-2 {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2; /* Số dòng muốn hiển thị */
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 1.5em; /* Có thể chỉnh tùy font */
+        max-height: 4.5em;
+    }
+
+    #sliderContainer {
+        max-height: 270px;
+        overflow-y: auto;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none;
+    }
+
+    .item_vd {
+        padding: 0px;
+        margin-left: 16px;
+        margin-top: 15px;
+    }
+
+    .swiper-slide {
+        padding: 0px;
+    }
+
+    .item_vd {
+        height: 90px;
+    }
+
+    #img_dv {
+        margin-right: 0px;
+        width: -webkit-fill-available;
+    }
+}
