--- a/WebAppService/wwwroot/web/assets/css/lienhe.css
+++ b/WebAppService/wwwroot/web/assets/css/lienhe.css
@@ -4,14 +4,16 @@
     font-weight: 700;
     font-family: Montserrat
 }
+
 .txt-c-1 {
     font-family: Inter;
     font-size: 13px;
     margin-bottom: 0px;
 }
+
 .color-black {
     color: #000000;
-    font-weight:600
+    font-weight: 600
 }
 
 
@@ -76,54 +78,85 @@
 .text-Montserrat {
     font-family: 'Montserrat', sans-serif;
 }
+
 .txt-dkk {
     font-size: 25px;
     font-weight: 700;
     font-family: Montserrat
 }
+
 .mt-form {
     margin-top: 40px;
 }
+
 .px-form {
     padding: 30px !important;
 }
+
 .mx-map {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.mx-main{
+
+.mx-main {
     margin-top: 50px;
 }
-
-.rc-anchor-normal{
-
+.btn-submit-lien-he {
+    padding: 0px 67px;
+    font-weight: 700;
+    font-family: 'Montserrat'
 }
+/* Tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .doctor-overlay {
+        display: none;
+        width: 250px;
+        object-fit: contain;
+    }
+    .tranform-x {
+         transform: translateX(0px); 
+        white-space: nowrap;
+    }
+    .btn-submit-lien-he {
+        padding: 20px 67px !important;
+        font-weight: 700;
+        font-family: 'Montserrat'
+    }
+}
+
 @media screen and (max-width: 768px) {
     .tranform-x {
         transform: translateX(0px);
         white-space: normal;
     }
+
     .mt-120 {
-        margin-top: 10px!important;
+        margin-top: 10px !important;
     }
+
     .mx-map {
         margin-top: 140px;
         margin-bottom: 20px;
     }
+
     .txt-dkk {
         font-size: 18px;
         font-weight: 700;
         font-family: Montserrat
     }
+
     .px-form {
         padding: 13px !important;
     }
+
     .mt-form {
         margin-top: 0 !important;
     }
+
     .bg-form {
-         background-color: #EDFFFF; 
+        background-color: #EDFFFF;
     }
+
     .mx-main {
         margin-top: 10px;
     }
