--- a/WebAppService/wwwroot/web/assets/css/mobile.css
+++ b/WebAppService/wwwroot/web/assets/css/mobile.css
@@ -88,13 +88,14 @@
         font-weight: 600;
     }
 
+  
     .main-header .main-nav ul li a {
         position: relative;
         color: #171616;
         font-weight: 700;
         padding: 0;
         display: block;
-        font-size: 12px;
+        font-size: 0.7vw;
         -webkit-transition: all .2s ease-out 0s;
         -moz-transition: all .2s ease-out 0s;
         -ms-transition: all .2s ease-out 0s;
@@ -108,5 +109,23 @@
 @media (min-width: 992px) {
     #navigation {
         display: none !important;
+    }
+}
+@media (min-width: 1920px) {
+    .main-header .main-nav ul li a {
+        position: relative;
+        color: #171616;
+        font-weight: 700;
+        padding: 0;
+        display: block;
+        font-size: 13px;
+        -webkit-transition: all .2s ease-out 0s;
+        -moz-transition: all .2s ease-out 0s;
+        -ms-transition: all .2s ease-out 0s;
+        -o-transition: all .2s ease-out 0s;
+        transition: all .2s ease-out 0s;
+        font-family: 'Nunito', sans-serif;
+        line-height: 1.5;
+        line-height: 60px;
     }
 }
