--- a/WebAppService/Views/AboutUs/AboutUs.cshtml
+++ b/WebAppService/Views/AboutUs/AboutUs.cshtml
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="col-md-5 pl-md-0">
-                <img src="/root/about2.jpg" class="img-fluid rounded" style="height:100%;object-fit: cover;" alt="Cây xanh y tế">
+                <img src="/root/about2.jpg" class="img-fluid img-mobile rounded" style="height:100%;object-fit: cover;" alt="Cây xanh y tế">
             </div>
         </div>
     </div>
