--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -120,6 +120,16 @@
         <div class="caption slide-left"></div>
     </div>
 </div>
+<div class="animated-slider is-tablet">
+    <div class="slide active">
+        <img src="~/src/slide/Medical table-05.png" />
+        <div class="caption zoom-in"></div>
+    </div>
+    <div class="slide">
+        <img src="~/src/slide/Medical table-06.png" />
+        <div class="caption slide-left"></div>
+    </div>
+</div>
 <div class="animated-slider is-mobile">
     <div class="slide active">
         <img src="~/src/slide/Slide-mobile.png" />
@@ -497,7 +507,7 @@
                 </div>
 
                 <div class="for-more pagination-area mb-20 mt-30">
-                    <a href="#">Xem thêm> </a>
+                    <a href="/video">Xem thêm> </a>
                 </div>
             </div>
         </div>
