--- a/WebAppService/wwwroot/web/assets/css/mobile.css
+++ b/WebAppService/wwwroot/web/assets/css/mobile.css
@@ -95,7 +95,7 @@
         font-weight: 700;
         padding: 0;
         display: block;
-        font-size: 0.7vw;
+        font-size: 11px;
         -webkit-transition: all .2s ease-out 0s;
         -moz-transition: all .2s ease-out 0s;
         -ms-transition: all .2s ease-out 0s;
