--- a/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
@@ -41,6 +41,7 @@
                                 <th data-field="urlImage" data-width="8" data-formatter="fm_Image" data-sortable="true">Ảnh</th>
                                 <th data-field="tieuDeBaiViet" data-sortable="true">Tên tiêu đề</th>
                                 <th data-field="moTaNgan" data-sortable="true">Mô tả ngắn</th>
+                                <th data-field="seoUrl" data-sortable="true">Seo Url</th>
                                 <th data-field="cbLoaiBaiDang" data-sortable="true" data-width="8">Phân loại dịch vụ</th>
                                 <th data-field="cbNhomBaiViet" data-sortable="true">Nhóm dịch vụ</th>
                                 <th data-field="isCongKhai" data-width="8" data-formatter="fm_editBVCK" data-sortable="true">Công khai</th>
@@ -103,8 +104,16 @@
                                                 </select>
                                             </div>
                                             <div class="col-sm-12 mb-2">
-                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
-                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi):<font class="text-danger">*</font></label>
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                                    <button class="btn btn-danger" id="btnAutoCode" type="button">
+                                                        <div class="d-flex align-items-center">
+                                                            <i class="ti ti-link me-1 fs-4"></i>
+                                                            Lấy tự động
+                                                        </div>
+                                                    </button>
+                                                </div>
                                             </div>
                                             <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Loại danh mục:</label>
