--- a/WebAppService/wwwroot/web/assets/css/color.css
+++ b/WebAppService/wwwroot/web/assets/css/color.css
@@ -82,7 +82,7 @@ p,
 button.search-icon,
 .user-account,
 ul.header-social-network li a {
-    color: #999999;
+    /*color: #999999;*/
 }
 button.subscribe{border-color:#1d55c1;color:#1d55c1;}
 button.subscribe:hover{background:#1d55c1;color:#fff;}
