--- a/WebAppService/Views/Shared/_HeaderMenu.cshtml
+++ b/WebAppService/Views/Shared/_HeaderMenu.cshtml
@@ -17,7 +17,7 @@
             <a href="#" class="translate-btn" data-lang="zh-CN"> <img src="https://flagcdn.com/tw.svg" alt="Chinese"></a>
             <a href="#" class="translate-btn" data-lang="en"> <img src="https://flagcdn.com/gb.svg" alt="English" style="width:38px"></a>
             <a href="#" class="ml-2" data-lang="fr">
-                <svg width="81" height="" viewBox="0 0 166 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="81" viewBox="0 0 166 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="166" height="49" rx="5" fill="white" />
                     <path d="M25 32C29.4183 32 33 28.4183 33 24C33 19.5817 29.4183 16 25 16C20.5817 16 17 19.5817 17 24C17 28.4183 20.5817 32 25 32Z" stroke="#00B9B5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                     <path d="M35 34L30.65 29.65" stroke="#00B9B5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
