--- a/WebAppService/Areas/Admin/Views/DichVuDacBiet/DichVuDacBiet.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVuDacBiet/DichVuDacBiet.cshtml
@@ -37,7 +37,8 @@
                                 <th data-field="tieuDeBaiViet" data-sortable="true">Tên tiêu đề</th>
                                 <th data-field="moTaNgan" data-sortable="true">Mô tả ngắn</th>
                                 <th data-field="seoUrl" data-sortable="true">Seo Url</th>
-                                @* <th data-field="isBaiVietNoiBat" data-width="8" data-formatter="fm_editBVNB" data-sortable="true">Nổi bật</th> *@
+                                <th data-field="tieuDeNgan" data-sortable="true" data-formatter="fm_UrlFile">Đường dẫn Icon</th>
+                                <th data-field="seoTittile" data-width="8" data-sortable="true" data-formatter="fm_SeoTittile">Hiển thị ở trang chủ</th>
                                 <th data-field="isCongKhai" data-width="8" data-formatter="fm_editBVCK" data-sortable="true">Công khai</th>
                             </tr>
                         </thead>
